--- a/crates/crate_interface/Cargo.toml
+++ b/crates/crate_interface/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axlog"
+name = "crate_interface"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,5 +7,3 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crate_interface = { path = "../../crates/crate_interface" }
-log = "0.4"
