--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -6,6 +6,13 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+alloc = ["axalloc"]
+platform-qemu-virt-riscv = ["axhal/platform-qemu-virt-riscv"]
+default = []
+
 [dependencies]
+axalloc = { path = "../axalloc", optional = true }
+axconfig = { path = "../axconfig" }
 axhal = { path = "../axhal" }
 axlog = { path = "../axlog" }
