--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -12,6 +12,7 @@ default = []
 
 [dependencies]
 cfg-if = "1.0"
+bitflags = "1.3"
 axconfig = { path = "../axconfig" }
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
