--- a/crates/page_table/Cargo.toml
+++ b/crates/page_table/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arceos-memtest"
+name = "page_table"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,5 +7,5 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axlog = { path = "../../modules/axlog" }
-axruntime = { path = "../../modules/axruntime", features = ["alloc", "paging"] }
+log = "0.4"
+bitflags = "1.3"
