--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -8,12 +8,16 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 [features]
 platform-qemu-virt-riscv = ["axconfig/platform-qemu-virt-riscv"]
+paging = ["axalloc", "page_table"]
 default = []
 
 [dependencies]
+log = "0.4"
 cfg-if = "1.0"
 bitflags = "1.3"
 axconfig = { path = "../axconfig" }
+axalloc = { path = "../axalloc", optional = true }
+page_table = { path = "../../crates/page_table", optional = true }
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
 riscv = "0.10"
