--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -17,6 +17,7 @@ cfg-if = "1.0"
 bitflags = "1.3"
 axconfig = { path = "../axconfig" }
 axalloc = { path = "../axalloc", optional = true }
+axerror = { path = "../axerror" }
 page_table = { path = "../../crates/page_table", optional = true }
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
