--- a/crates/memory_addr/Cargo.toml
+++ b/crates/memory_addr/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "page_table"
+name = "memory_addr"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,6 +7,3 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
-bitflags = "1.3"
-memory_addr = { path = "../memory_addr" }
