--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 
 members = [
+    "crates/allocator",
     "crates/crate_interface",
     "crates/memory_addr",
     "crates/page_table",
