--- a/crates/allocator/Cargo.toml
+++ b/crates/allocator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axalloc"
+name = "allocator"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,8 +7,5 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
-spin = "0.9"
-memory_addr = { path = "../../crates/memory_addr" }
-allocator = { path = "../../crates/allocator" }
-axerror = { path = "../axerror" }
+buddy_system_allocator = { version = "0.9"}
+bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator.git", rev = "88e871a" }
