--- a/os/exception/Cargo.toml
+++ b/os/exception/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arceos-memtest"
+name = "arceos-exception"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,4 +7,4 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axruntime = { path = "../../modules/axruntime", features = ["alloc", "paging"] }
+axruntime = { path = "../../modules/axruntime" }
