--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,20 @@
 members = [
     "crates/allocator",
     "crates/crate_interface",
+    "crates/lazy_init",
     "crates/memory_addr",
     "crates/page_table",
+    "crates/scheduler",
 
     "modules/axalloc",
     "modules/axconfig",
     "modules/axerror",
     "modules/axhal",
     "modules/axruntime",
+    "modules/axtask",
 
     "os/exception",
     "os/helloworld",
     "os/memtest",
+    "os/multitask",
 ]
