--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -15,6 +15,7 @@ default = []
 log = "0.4"
 cfg-if = "1.0"
 bitflags = "1.3"
+static_assertions = "1.1.0"
 axconfig = { path = "../axconfig" }
 axalloc = { path = "../axalloc", optional = true }
 axerror = { path = "../axerror" }
