--- a/crates/linked_list/Cargo.toml
+++ b/crates/linked_list/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scheduler"
+name = "linked_list"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,4 +7,3 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-linked_list = { path = "../linked_list" }
