Use static types instead of trait objects in axdriver

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
     "modules/axdriver",
     "modules/axerror",
     "modules/axhal",
+    "modules/axnet",
     "modules/axruntime",
     "modules/axtask",
 ]
