--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -7,12 +7,12 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-alloc = ["axalloc"]
+alloc = ["dep:axalloc"]
 paging = ["alloc", "axhal/paging"]
-multitask = ["alloc", "axtask"]
+multitask = ["alloc", "dep:axtask"]
 
-fs = ["alloc", "paging", "axdriver/block"] # TODO: remove "paging"
-net = ["alloc", "paging", "axdriver/net"]
+fs = ["alloc", "paging", "axdriver/virtio-blk"] # TODO: remove "paging"
+net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet"]
 
 log-level-off = ["axlog/log-level-off"]
 log-level-error = ["axlog/log-level-error"]
@@ -21,7 +21,7 @@ log-level-info = ["axlog/log-level-info"]
 log-level-debug = ["axlog/log-level-debug"]
 log-level-trace = ["axlog/log-level-trace"]
 
-platform-qemu-virt-riscv = ["axhal/platform-qemu-virt-riscv", "axdriver?/virtio"]
+platform-qemu-virt-riscv = ["axhal/platform-qemu-virt-riscv", "axdriver?/bus-mmio"]
 
 default = []
 
@@ -31,4 +31,5 @@ axconfig = { path = "../axconfig" }
 axdriver = { path = "../axdriver", optional = true }
 axhal = { path = "../axhal" }
 axlog = { path = "../axlog" }
+axnet = { path = "../axnet", optional = true }
 axtask = { path = "../axtask", optional = true }
