port to aarch64

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,8 @@ lto = true
 rustflags = [
     "-Clink-arg=-Tmodules/axhal/linker.lds"
 ]
+
+[target.aarch64-unknown-none-softfloat]
+rustflags = [
+    "-Clink-arg=-Tmodules/axhal/linker.lds"
+]
