--- a/crates/page_table_entry/Cargo.toml
+++ b/crates/page_table_entry/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "page_table"
+name = "page_table_entry"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,7 +7,9 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
 cfg-if = "1.0"
+bitflags = "1.3"
 memory_addr = { path = "../memory_addr" }
-page_table_entry = { path = "../page_table_entry" }
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+x86_64 = "0.14"
