--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 [features]
 platform-qemu-virt-riscv = ["axconfig/platform-qemu-virt-riscv"]
-platform-qemu-virt-aarch64 = ["axconfig/platform-qemu-virt-aarch64", "page_table"]
+platform-qemu-virt-aarch64 = ["axconfig/platform-qemu-virt-aarch64", "dep:page_table_entry"]
 paging = ["axalloc", "page_table"]
 default = []
 
@@ -22,6 +22,7 @@ axconfig = { path = "../axconfig" }
 axalloc = { path = "../axalloc", optional = true }
 axerror = { path = "../axerror" }
 page_table = { path = "../../crates/page_table", optional = true }
+page_table_entry = { path = "../../crates/page_table_entry", optional = true }
 memory_addr = { path = "../../crates/memory_addr" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
