Support net for aarch64

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "crates/memory_addr",
     "crates/page_table",
     "crates/page_table_entry",
+    "crates/ratio",
     "crates/scheduler",
     "crates/tuple_for_each",
 
