--- a/modules/axconfig/src/platform/qemu-virt-aarch64.toml
+++ b/modules/axconfig/src/platform/qemu-virt-aarch64.toml
@@ -9,4 +9,39 @@ phys-virt-offset = "0xffff_0000_0000_0000"
 mmio-regions = [
     ["0x0900_0000", "0x1000"],      # PL011 UART
     ["0x0800_0000", "0x2_0000"],    # GICv2
+    ["0x0a00_0000", "0x4000"],      # VirtIO
+]
+virtio-mmio-regions = [
+    ["0x0a00_0000", "0x200"],
+    ["0x0a00_0200", "0x200"],
+    ["0x0a00_0400", "0x200"],
+    ["0x0a00_0600", "0x200"],
+    ["0x0a00_0800", "0x200"],
+    ["0x0a00_0a00", "0x200"],
+    ["0x0a00_0c00", "0x200"],
+    ["0x0a00_0e00", "0x200"],
+    ["0x0a00_1000", "0x200"],
+    ["0x0a00_1200", "0x200"],
+    ["0x0a00_1400", "0x200"],
+    ["0x0a00_1600", "0x200"],
+    ["0x0a00_1800", "0x200"],
+    ["0x0a00_1a00", "0x200"],
+    ["0x0a00_1c00", "0x200"],
+    ["0x0a00_1e00", "0x200"],
+    ["0x0a00_3000", "0x200"],
+    ["0x0a00_2200", "0x200"],
+    ["0x0a00_2400", "0x200"],
+    ["0x0a00_2600", "0x200"],
+    ["0x0a00_2800", "0x200"],
+    ["0x0a00_2a00", "0x200"],
+    ["0x0a00_2c00", "0x200"],
+    ["0x0a00_2e00", "0x200"],
+    ["0x0a00_3000", "0x200"],
+    ["0x0a00_3200", "0x200"],
+    ["0x0a00_3400", "0x200"],
+    ["0x0a00_3600", "0x200"],
+    ["0x0a00_3800", "0x200"],
+    ["0x0a00_3a00", "0x200"],
+    ["0x0a00_3c00", "0x200"],
+    ["0x0a00_3e00", "0x200"],
 ]
