--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -17,6 +17,7 @@ net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet"]
 default = []
 
 [dependencies]
+crate_interface = { path = "../../crates/crate_interface" }
 axalloc = { path = "../axalloc", optional = true }
 axconfig = { path = "../axconfig" }
 axdriver = { path = "../axdriver", optional = true }
