--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -17,12 +17,12 @@ default = []
 
 [dependencies]
 log = "0.4"
-spin = "0.9"
 cfg-if = "1.0"
 bitflags = "1.3"
 static_assertions = "1.1.0"
 axconfig = { path = "../axconfig" }
 axalloc = { path = "../axalloc", optional = true }
+spinlock = { path = "../../crates/spinlock" }
 ratio = { path = "../../crates/ratio", optional = true }
 lazy_init = { path = "../../crates/lazy_init", optional = true }
 page_table = { path = "../../crates/page_table", optional = true }
