--- a/modules/axnet/Cargo.toml
+++ b/modules/axnet/Cargo.toml
@@ -12,12 +12,12 @@ default = ["axdriver/virtio-net", "smoltcp"]
 
 [dependencies]
 log = "0.4"
-spin = "0.9"
 cfg-if = "1.0"
 driver_common = { path = "../../crates/driver_common" }
 driver_net = { path = "../../crates/driver_net" }
 lazy_init = { path = "../../crates/lazy_init" }
 axhal = { path = "../axhal" }
+axsync = { path = "../axsync" }
 axtask = { path = "../axtask", default-features = false }
 axdriver = { path = "../axdriver" }
 axerror = { path = "../axerror" }
