--- a/modules/axsync/Cargo.toml
+++ b/modules/axsync/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axalloc"
+name = "axsync"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,8 +7,5 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
+axtask = { path = "../axtask" }
 spinlock = { path = "../../crates/spinlock" }
-memory_addr = { path = "../../crates/memory_addr" }
-allocator = { path = "../../crates/allocator" }
-axerror = { path = "../axerror" }
