--- a/apps/task/parallel/Cargo.toml
+++ b/apps/task/parallel/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "allocator"
+name = "arceos-parallel"
 version = "0.1.0"
 edition = "2021"
 authors = ["Yuekai Jia <equation618@gmail.com>"]
@@ -7,5 +7,4 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-buddy_system_allocator = { version = "0.9", default-features = false }
-bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator.git", rev = "88e871a" }
+libax = { path = "../../../ulib/libax", features = ["alloc", "paging", "multitask"] }
