--- a/modules/axsync/Cargo.toml
+++ b/modules/axsync/Cargo.toml
@@ -6,6 +6,14 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+multitask = ["axtask/multitask"]
+default = ["multitask", "axtask/default"]
+
 [dependencies]
-axtask = { path = "../axtask" }
 spinlock = { path = "../../crates/spinlock" }
+axtask = { path = "../axtask", default-features = false }
+
+[dev-dependencies]
+rand = "0.8"
+spinlock = { path = "../../crates/spinlock", features = ["std"] }
