--- a/ulib/libax/Cargo.toml
+++ b/ulib/libax/Cargo.toml
@@ -12,7 +12,7 @@ alloc = ["axruntime/alloc"]
 paging = ["axruntime/paging"]
 
 # Multi-task
-multitask = ["axruntime/multitask", "axtask/multitask", "dep:axsync"]
+multitask = ["axruntime/multitask", "axtask/multitask", "axsync/multitask"]
 sched_fifo = ["axtask/sched_fifo"]
 sched_rr = ["axtask/sched_rr"]
 
@@ -43,5 +43,5 @@ axhal = { path = "../../modules/axhal" }
 axlog = { path = "../../modules/axlog" }
 axnet = { path = "../../modules/axnet", optional = true }
 axruntime = { path = "../../modules/axruntime" }
-axsync = { path = "../../modules/axsync", optional = true }
+axsync = { path = "../../modules/axsync", default-features = false, optional = true }
 axtask = { path = "../../modules/axtask", default-features = false, optional = true }
