--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -29,6 +29,7 @@ page_table = { path = "../../crates/page_table", optional = true }
 page_table_entry = { path = "../../crates/page_table_entry", optional = true }
 memory_addr = { path = "../../crates/memory_addr" }
 handler_table = { path = "../../crates/handler_table" }
+crate_interface = { path = "../../crates/crate_interface" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86 = "0.52"
@@ -40,6 +41,7 @@ sbi-rt = { version = "0.0.2", features = ["legacy"] }
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 aarch64-cpu = "9.3"
 tock-registers = "0.8"
+arm_gic = { path = "../../crates/arm_gic" }
 
 [build-dependencies]
 axconfig = { path = "../axconfig" }
