--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "crates/driver_common",
     "crates/driver_net",
     "crates/driver_virtio",
+    "crates/handler_table",
     "crates/lazy_init",
     "crates/linked_list",
     "crates/memory_addr",
