--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -13,6 +13,7 @@ multitask = ["alloc", "axtask/multitask"]
 
 fs = ["alloc", "paging", "axdriver/virtio-blk"] # TODO: remove "paging"
 net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet"]
+display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay"]
 
 default = []
 
@@ -25,4 +26,5 @@ axdriver = { path = "../axdriver", optional = true }
 axhal = { path = "../axhal" }
 axlog = { path = "../axlog" }
 axnet = { path = "../axnet", optional = true }
+axdisplay = { path = "../axdisplay", optional = true }
 axtask = { path = "../axtask", default-features = false }
