--- a/modules/axruntime/Cargo.toml
+++ b/modules/axruntime/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 [features]
 alloc = ["dep:axalloc"]
-paging = ["alloc", "axhal/paging"]
+paging = ["alloc", "axhal/paging", "dep:lazy_init"]
 multitask = ["alloc", "axtask/multitask"]
 smp = ["axhal/smp", "spinlock/smp"]
 
@@ -21,6 +21,7 @@ default = []
 [dependencies]
 percpu = { path = "../../crates/percpu" }
 spinlock = { path = "../../crates/spinlock" }
+lazy_init = { path = "../../crates/lazy_init", optional = true }
 crate_interface = { path = "../../crates/crate_interface" }
 axalloc = { path = "../axalloc", optional = true }
 axconfig = { path = "../axconfig" }
