percpu: disable preemption when access per-CPU data

--- a/crates/kernel_guard/Cargo.toml
+++ b/crates/kernel_guard/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "spinlock"
+name = "kernel_guard"
 version = "0.1.0"
 edition = "2021"
-authors = ["Yuekai Jia <equation618@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[features]
-smp = []
-default = []
-
 [dependencies]
 cfg-if = "1.0"
-kernel_guard = { path = "../kernel_guard" }
+crate_interface = { path = "../crate_interface" }
