--- a/modules/axhal/Cargo.toml
+++ b/modules/axhal/Cargo.toml
@@ -23,6 +23,7 @@ bitflags = "1.3"
 static_assertions = "1.1.0"
 axconfig = { path = "../axconfig" }
 axalloc = { path = "../axalloc", optional = true }
+kernel_guard = { path = "../../crates/kernel_guard" }
 spinlock = { path = "../../crates/spinlock" }
 ratio = { path = "../../crates/ratio", optional = true }
 lazy_init = { path = "../../crates/lazy_init" }
