ulib: add stdin, stdout and more io helpers

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "crates/allocator",
     "crates/arm_gic",
     "crates/axerrno",
+    "crates/axio",
     "crates/crate_interface",
     "crates/driver_block",
     "crates/driver_common",
