fs: add vfs framework, implement file & dir open/read

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "apps/exception",
     "apps/helloworld",
     "apps/memtest",
+    "apps/fs/fstest",
     "apps/net/echoserver",
     "apps/net/httpclient",
     "apps/net/httpserver",
@@ -15,6 +16,8 @@ members = [
     "crates/allocator",
     "crates/arm_gic",
     "crates/axerrno",
+    "crates/axfs_devfs",
+    "crates/axfs_vfs",
     "crates/axio",
     "crates/crate_interface",
     "crates/driver_block",
@@ -41,6 +44,7 @@ members = [
     "modules/axconfig",
     "modules/axdisplay",
     "modules/axdriver",
+    "modules/axfs",
     "modules/axhal",
     "modules/axlog",
     "modules/axnet",
