fs: add support of user mode testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "apps/exception",
     "apps/helloworld",
     "apps/memtest",
-    "apps/fs/fstest",
+    "apps/fs/shell",
     "apps/net/echoserver",
     "apps/net/httpclient",
     "apps/net/httpserver",
