add sqlite3 fs support

--- a/ulib/c_libax/libax_bindings/Cargo.toml
+++ b/ulib/c_libax/libax_bindings/Cargo.toml
@@ -30,6 +30,8 @@ default = ["libax/default"]
 [dependencies]
 libax = { path = "../../libax", default-features = false }
 axalloc = { path = "../../../modules/axalloc", optional = true }
+axerrno = { path = "../../../crates/axerrno", optional = false }
 
 [build-dependencies]
 cbindgen = "0.24"
+bindgen = "0.64"
