ulib: refine fs operations in c_libax

--- a/ulib/c_libax/libax_bindings/Cargo.toml
+++ b/ulib/c_libax/libax_bindings/Cargo.toml
@@ -23,11 +23,12 @@ sched_rr = ["libax/sched_rr"]
 net = ["libax/net"]
 
 # File system
-fs = ["libax/fs"]
+fs = ["libax/fs", "alloc"]
 
 default = ["libax/default"]
 
 [dependencies]
+log = "0.4"
 libax = { path = "../../libax", default-features = false }
 axalloc = { path = "../../../modules/axalloc", optional = true }
 axerrno = { path = "../../../crates/axerrno", optional = false }
